--- a/index.html
+++ b/index.html
@@ -1,43 +1,19 @@
 <!DOCTYPE html>
-
-<html>
-
-    <head>
-
-        <title>サンプルパズル</title>
-
-        <meta charset="utf-8">
-
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">]
-
-        <link rel="stylesheet" href="layout.css">
-
-        <script type="text/javascript" src="puzzle.js"></script>
-
-    </head>
-
-    <body>
-
-        <center>
-
-            <h1>8パズル</h1>
-
-            <div id="puzzle">
-
-                <button id="t0" class="btn btn-secondary tile" onclick="pushed(this.id)" > </button> <button id="t1" class="btn btn-secondary tile" onclick="pushed(this.id)" >1</button> <button id="t2" class="btn btn-secondary tile" onclick="pushed(this.id)" >2</button><br />
-
-                <button id="t3" class="btn btn-secondary tile" onclick="pushed(this.id)" >3</button> <button id="t4" class="btn btn-secondary tile" onclick="pushed(this.id)" >4</button> <button id="t5" class="btn btn-secondary tile" onclick="pushed(this.id)" >5</button><br />
-
-                <button id="t6" class="btn btn-secondary tile" onclick="pushed(this.id)" >6</button> <button id="t7"  class="btn btn-secondary tile" onclick="pushed(this.id)" >7</button> <button id="t8" class="btn btn-secondary tile" onclick="pushed(this.id)" >8</button>
-
-            </div>
-
-            <br>
-
-            <button class="btn btn-primary" onclick="randomTaslar()">シャッフル</button>
-
-        </center>
-
-    </body>
-
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>puzzle</title>
+    <link rel="stylesheet" href="./css/stylesheet.css">
+</head>
+<body>
+    <div id="main">
+        <div class="panel" id="js-show-panel">
+        </div>
+        <button class="reset" id="js-reset-puzzle">
+            リセット
+        </button>
+    </div>
+    <script src="./js/app.js"></script>  
+</body>
 </html>
