--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>puzzle</title>
-    <link rel="stylesheet" href="./css/stylesheet.css">
-</head>
-<body>
-    <div id="main">
-        <div class="panel" id="js-show-panel">
-        </div>
-        <button class="reset" id="js-reset-puzzle">
-            リセット
-        </button>
-    </div>
-    <script src="./js/app.js"></script>  
-</body>
-</html>
+<canvas id = "myCanvas " width="480" height="320">
+    
+</canvas> 
